k8s/meshapps/mesh-app-a.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mesh-app-a
    app.kubernetes.io/component: mesh-app-a
    app.kubernetes.io/instance: mesh-mesh-app-a
    app.kubernetes.io/part-of: meshapps
    app.openshift.io/runtime: python
  name: mesh-app-a
  namespace: meshapps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mesh-app-a
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mesh-app-a
        version: v1
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - image: quay.io/nlembers/distributed-tracing-mesh-app-a:latest
          imagePullPolicy: Always
          name: mesh-app-a
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mesh-app-a
  name: mesh-app-a
  namespace: meshapps
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: mesh-app-a
  sessionAffinity: None
  type: ClusterIP
