k8s/meshapps/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: meshapps-gateway
  namespace: meshapps
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mesh-app-a-gateway
  namespace: meshapps
spec:
  hosts:
  - "*"
  gateways:
  - meshapps-gateway
  http:
  - match:
    - uri:
        prefix: /mesh-app-a
    rewrite:
      uri: /
    route:
    - destination:
        host: mesh-app-a
        port:
          number: 8080
